--- a/src/main/resources/fxml/game.fxml
+++ b/src/main/resources/fxml/game.fxml
@@ -485,7 +485,7 @@
       </Label>
       <ToggleButton id="vertical" fx:id="vertical" layoutX="54.0" layoutY="395.0" mnemonicParsing="false" onMouseReleased="#verticalRelease" selected="true" text="Vertical" />
       <ToggleButton id="horizontal" fx:id="horizontal" layoutX="113.0" layoutY="395.0" mnemonicParsing="false" onMouseReleased="#horizontalRelease" text="Horizontal" />
-      <Button fx:id="endPlacementButton" disable="true" layoutX="353.0" layoutY="418.0" mnemonicParsing="false" onAction="#endPlacementTurn" text="End Placement" />
+      <Button fx:id="endPlacementButton" disable="true" layoutX="353.0" layoutY="408.0" mnemonicParsing="false" onAction="#endPlacementTurn" text="End Placement" />
       <Button fx:id="startOwnButton" layoutX="174.0" layoutY="386.0" mnemonicParsing="false" onMouseReleased="#startOwn" prefHeight="32.0" prefWidth="153.0" text="Start" visible="false">
          <font>
             <Font name="System Bold" size="20.0" />
@@ -506,5 +506,10 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Button>
+      <Label fx:id="stopWatch" alignment="CENTER" layoutX="308.0" layoutY="14.0" prefHeight="42.0" prefWidth="184.0">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
