--- a/src/main/resources/fxml/topten.fxml
+++ b/src/main/resources/fxml/topten.fxml
@@ -9,20 +9,22 @@
 
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TopTenController">
-   <children>
-      <TableView fx:id="toptenTable" editable="true" layoutX="25.0" layoutY="74.0" prefHeight="550.0" prefWidth="650.0">
-        <columns>
-          <TableColumn fx:id="player" prefWidth="200.0" text="Player" />
-          <TableColumn fx:id="steps" prefWidth="50.0" text="Steps" />
-            <TableColumn fx:id="duration" prefWidth="100.0" text="Duration" />
-            <TableColumn fx:id="created" prefWidth="295.0" text="Date" />
-        </columns>
-      </TableView>
-      <Label layoutX="272.0" layoutY="32.0" text="Top Ten games:">
-         <font>
-            <Font size="22.0" />
-         </font>
-      </Label>
-      <Button layoutX="300.0" layoutY="635.0" mnemonicParsing="false" onAction="#back" prefHeight="51.0" prefWidth="122.0" text="Main menu" />
-   </children>
+    <children>
+        <TableView fx:id="toptenTable" editable="true" layoutX="25.0" layoutY="74.0" prefHeight="550.0" prefWidth="650.0">
+            <columns>
+                <TableColumn fx:id="player" prefWidth="120.0" text="Player" />
+                <TableColumn fx:id="otherPlayer" prefWidth="120.0" text="Other Player" />
+                <TableColumn fx:id="winnerPlayer" prefWidth="120.0" text="Winner Player" />
+                <TableColumn fx:id="misses" prefWidth="50.0" text="Misses" />
+                <TableColumn fx:id="duration" prefWidth="80.0" text="Duration" />
+                <TableColumn fx:id="created" prefWidth="200.0" text="Date" />
+            </columns>
+        </TableView>
+        <Label layoutX="272.0" layoutY="32.0" text="Top Ten games:">
+            <font>
+                <Font size="22.0" />
+            </font>
+        </Label>
+        <Button layoutX="300.0" layoutY="635.0" mnemonicParsing="false" onAction="#back" prefHeight="51.0" prefWidth="122.0" text="Main menu" />
+    </children>
 </Pane>
